Add cub-scout html

--- a/cub-scout-awards.html
+++ b/cub-scout-awards.html
@@ -64,8 +64,20 @@
 			<div class="top-bar">
 				<div class="container" style="margin-top: 10px; margin-bottom: 10px;">
 					<div class="row">
+						<!-- <div class="w3-topbar-left">
+						<ul class="social-line text-center pull-right">
+							<li><a href="javascript:void(0);"><i class="fa fa-phone"></i> <span>+149 75 23 222 38</span> </a></li>
+							<li><a href="javascript:void(0);"><i class="fa fa-envelope-o"></i> <span>info@example.com</span></a></li>
+							<li><a href="javascript:void(0);"><i class="fa fa-clock-o"></i> <span>Mon - Fri: 08.00 - 17.00</span></a></li>
+						</ul>
+					</div>                         -->
 						<div class="w3-topbar-right">
 							<ul class="text-center pull-right" style="display: flex; list-style: none;">
+								<!-- <ul class="social-line text-center pull-right"> -->
+								<!-- <li><a href="javascript:void(0);" class="fa fa-facebook"></a></li>
+							<li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
+							<li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
+							<li><a href="javascript:void(0);" class="fa fa-google-plus"></a></li> -->
 								<li><a href="centennial-tenthBrigade.html" class=" ">第十旅百週年專區 </a>|&nbsp;</li>
 								<li><a href="leader-login.html" class=" ">領袖登入區 </a>|&nbsp;</li>
 								<li><a href="youth-login.html" class=" ">青少年成員登入區</a></li>
@@ -217,32 +229,30 @@
 										<li> <a href="javascript:;">報名表 & 同意書</a>
 											<ul>
 												<li><a href="./pdf/event-registration-form.pdf" target="_blank">活動/訓練班報名表</a></li>
-												<li><a href="./pdf/parental-consent.pdf" target="_blank">家長同意書</a></li>
+												<li><a href="./pdf/parental-consent.pdf">家長同意書</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">通知書</a>
 											<ul>
-												<li><a href="./pdf/golden-bauhinia-award-notice.pdf" target="_blank">金紫荊獎章開展通知書</a></li>
+												<li><a href="./pdf/golden-bauhinia-award-notice.pdf">金紫荊獎章開展通知書</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">申請表</a>
 											<ul>
-												<li><a href="./pdf/golden-bauhinia-award-form.pdf" target="_blank">金紫荊獎章及證書申請表</a></li>
-												<li><a href="./pdf/scout-specialist-badge.pdf" target="_blank">童軍專科徽章/獎章考驗申請表</a></li>
-												<li><a href="./pdf/general-leader-medal-and-certificate.pdf" target="_blank">總領袖獎章及證書申請表</a></li>
-												<li><a href="./pdf/senior-scout-medal-and-certificate.pdf" target="_blank">深資童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/honor-scout-medal-and-certificate.pdf" target="_blank">榮譽童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf"
-														target="_blank">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
-												<li><a href="./pdf/rover-scout-medal-and-certificate.pdf" target="_blank">樂行童軍獎章及證書申請表</a></li>
-												<li><a href="./pdf/baden-medal-and-certificate.pdf" target="_blank">貝登堡獎章及證書申請表</a></li>
-												<li><a href="./pdf/overseas-application-form" target="_blank">參加海外活動申請表格</a></li>
+												<li><a href="./pdf/golden-bauhinia-award-form.pdf">金紫荊獎章及證書申請表</a></li>
+												<li><a href="./pdf/scout-specialist-badge.pdf">童軍專科徽章/獎章考驗申請表</a></li>
+												<li><a href="./pdf/general-leader-medal-and-certificate.pdf">總領袖獎章及證書申請表</a></li>
+												<li><a href="./pdf/senior-scout-medal-and-certificate.pdf">深資童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/honor-scout-medal-and-certificate.pdf">榮譽童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
+												<li><a href="./pdf/rover-scout-medal-and-certificate.pdf">樂行童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/baden-medal-and-certificate.pdf">貝登堡獎章及證書申請表</a></li>
+												<li><a href="./pdf/overseas-application-form">參加海外活動申請表格</a></li>
 											</ul>
 										</li>
 										<li> <a href="javascript:;">其他</a>
 											<ul>
-												<li><a href="./pdf/seniorScout-honorScout-medal-and-certificate.pdf"
-														target="_blank">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
+												<li><a href="./pdf/seniorScout-honorScout-medal-and-certificate.pdf">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -280,7 +290,7 @@
 			<div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/scouts/img-youngScouts-bg.jpg);">
 				<div class="container">
 					<div class="w3-bnr-inr-entry">
-						<h1 class="text-white">小童軍團相簿</h1>
+						<h1 class="text-white">幼童軍團獎項</h1>
 					</div>
 				</div>
 			</div>
@@ -290,196 +300,77 @@
 				<div class="container">
 					<ul class="list-inline">
 						<li><a href="#">Home</a></li>
-						<li>小童軍團相簿</li>
+						<li>幼童軍團獎項</li>
 					</ul>
 				</div>
 			</div>
 			<!-- Breadcrumb row END -->
 			<!-- contact area -->
 			<div class="content-area">
-				<!-- contact area -->
-				<div class="content-area">
-					<div class="content-area">
-						<!-- Left & right section start -->
-						<div class="container">
-							<!-- Gallery -->
-							<div class="row">
-								<ul id="masonry" class="w3-gallery-listing gallery-grid-4 mfp-gallery">
-									<li data-filter="home" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g1-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g1.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+				<!-- who we are -->
+				<div class="container">
+					<div class="row">
+						<!-- Side Bar -->
+						<div class="col-md-12">
+							<div>
+								<h2 class="m-t30 m-b10 hkg-blue">幼童軍團獎項</h2>
+								<ul class="list-check-circle primary">
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2019</span> 幼童軍團 - 全港深資童軍錦標賽，團隊機智項目冠軍</h4>
 									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow w3-img-effect zoom">
-												<a href="javascript:void(0);"> <img src="images/gallery/ys-g2-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g2.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2018</span> 幼童軍團 - 區總監盃冠軍</h4>
 									</li>
-									<li data-filter="children-aid" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g3-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g3.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2017</span> 幼童軍團 - 全港深資童軍錦標賽，野外挑戰項目亞軍</h4>
 									</li>
-									<li data-filter="commercial" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g4-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g4.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2015</span> 幼童軍團 - 嘉爾頓錦標西區選拔賽冠軍</h4>
 									</li>
-									<li data-filter="window" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g5-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g5.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2015</span> 幼童軍團 - 香港總監挑戰盾西區選拔賽亞軍</h4>
 									</li>
-									<li data-filter="apartment" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g6-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g6.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2014</span> 幼童軍團 - 全港深資童軍錦標賽總亞軍，野外挑戰項目亞軍</h4>
 									</li>
-									<li data-filter="construction" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g7-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g7.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2012</span> 幼童軍團 - 全港嘉爾頓錦標賽總冠</h4>
 									</li>
-									<li data-filter="home" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g8-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g8.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2009</span> 幼童軍團 - 嘉爾頓錦標西區選拔賽冠軍</h4>
 									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g9-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g9.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2007</span> 幼童軍團 - 嘉爾頓錦標西區選拔賽冠軍</h4>
 									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g10-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g10.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2005</span> 幼童軍團 - 嘉爾頓錦標西區選拔賽亞軍</h4>
 									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g11-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g11.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2003</span> 幼童軍團 - 全港深資童軍錦標賽總亞軍</h4>
 									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g12-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g12.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2002</span> 幼童軍團 - 全港深資童軍錦標賽，遠足項目及團隊機智項目冠軍</h4>
+									</li>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">2000</span> 幼童軍團 - 嘉爾頓錦標總冠軍</h4>
+									</li>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">1993</span> 幼童軍團 - 威爾斯太子錦標總亞軍</h4>
+									</li>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">1953</span> 幼童軍團 - 威爾斯太子錦標冠軍</h4>
+									</li>
+									<li>
+										<h4 class="w3-title m-t0"><span class="hkg-org">1933</span> 幼童軍團 - 威爾斯太子錦標冠軍</h4>
 									</li>
 								</ul>
 							</div>
-							<!-- Gallery END -->
-							<!-- Pagination start -->
-							<div class="pagination-bx  clearfix ">
-								<ul class="pagination">
-									<li class="previous"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-									<li class="active"><a href="#">1</a></li>
-									<li><a href="#">2</a></li>
-									<li><a href="#">3</a></li>
-									<li class="next"><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
-								</ul>
-							</div>
-							<!-- Pagination END -->
 						</div>
-						<!-- Left & right section  END -->
+						<!-- Side Bar END -->
+						<!-- Right Bar -->
 					</div>
 				</div>
-				<!-- contact area  END -->
+				<!-- who we are END -->
 			</div>
 			<!-- contact area  END -->
 		</div>
