--- a/cub-scout-gallery.html
+++ b/cub-scout-gallery.html
@@ -280,7 +280,7 @@
 			<div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/scouts/img-youngScouts-bg.jpg);">
 				<div class="container">
 					<div class="w3-bnr-inr-entry">
-						<h1 class="text-white">小童軍團相簿</h1>
+						<h1 class="text-white">幼童軍團相簿</h1>
 					</div>
 				</div>
 			</div>
@@ -290,7 +290,7 @@
 				<div class="container">
 					<ul class="list-inline">
 						<li><a href="#">Home</a></li>
-						<li>小童軍團相簿</li>
+						<li>幼童軍團相簿</li>
 					</ul>
 				</div>
 			</div>
