--- a/cub-scout-intro.html
+++ b/cub-scout-intro.html
@@ -274,216 +274,56 @@
 			<!-- main header END -->
 		</header>
 		<!-- header END -->
-		<!-- Content -->
-		<div class="page-content bg-white">
-			<!-- inner page banner -->
-			<div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/scouts/img-youngScouts-bg.jpg);">
-				<div class="container">
-					<div class="w3-bnr-inr-entry">
-						<h1 class="text-white">小童軍團相簿</h1>
-					</div>
-				</div>
-			</div>
-			<!-- inner page banner END -->
-			<!-- Breadcrumb row -->
-			<div class="breadcrumb-row">
-				<div class="container">
-					<ul class="list-inline">
-						<li><a href="#">Home</a></li>
-						<li>小童軍團相簿</li>
-					</ul>
-				</div>
-			</div>
-			<!-- Breadcrumb row END -->
-			<!-- contact area -->
-			<div class="content-area">
-				<!-- contact area -->
-				<div class="content-area">
-					<div class="content-area">
-						<!-- Left & right section start -->
-						<div class="container">
-							<!-- Gallery -->
-							<div class="row">
-								<ul id="masonry" class="w3-gallery-listing gallery-grid-4 mfp-gallery">
-									<li data-filter="home" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g1-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g1.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow w3-img-effect zoom">
-												<a href="javascript:void(0);"> <img src="images/gallery/ys-g2-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g2.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="children-aid" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g3-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g3.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="commercial" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g4-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g4.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="window" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g5-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g5.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="apartment" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g6-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g6.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="construction" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g7-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g7.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="home" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g8-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g8.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g9-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g9.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g10-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g10.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g11-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g11.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li data-filter="office" class="card-container col-lg-3 col-md-3 col-sm-6 col-xs-6">
-										<div class="w3-box w3-gallery-box">
-											<div class="w3-thum w3-img-overlay1 w3-img-effect zoom-slow"> <a href="javascript:void(0);"> <img
-														src="images/gallery/ys-g12-480.jpg" alt=""> </a>
-												<div class="overlay-bx">
-													<div class="overlay-icon"> <a href="javascript:void(0);"> <i
-																class="fa fa-link icon-bx-xs"></i> </a> <a href="images/gallery/ys-g12.jpg"
-															class="mfp-link" title="Title will come here"> <i class="fa fa-picture-o icon-bx-xs"></i>
-														</a> </div>
-												</div>
-											</div>
-										</div>
-									</li>
-								</ul>
-							</div>
-							<!-- Gallery END -->
-							<!-- Pagination start -->
-							<div class="pagination-bx  clearfix ">
-								<ul class="pagination">
-									<li class="previous"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-									<li class="active"><a href="#">1</a></li>
-									<li><a href="#">2</a></li>
-									<li><a href="#">3</a></li>
-									<li class="next"><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
-								</ul>
-							</div>
-							<!-- Pagination END -->
-						</div>
-						<!-- Left & right section  END -->
-					</div>
-				</div>
-				<!-- contact area  END -->
-			</div>
-			<!-- contact area  END -->
-		</div>
-		<!-- Content END-->
+    <!-- Content -->
+    <div class="page-content bg-white">
+        <!-- inner page banner -->
+        <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/scouts/img-youngScouts-bg.jpg);">
+            <div class="container">
+                <div class="w3-bnr-inr-entry">
+                    <h1 class="text-white">幼童軍團介紹</h1>
+                </div>
+            </div>
+        </div>
+        <!-- inner page banner END -->
+        <!-- Breadcrumb row -->
+        <div class="breadcrumb-row">
+            <div class="container">
+                <ul class="list-inline">
+                    <li><a href="#">Home</a></li>
+                    <li>幼童軍團介紹</li>
+                </ul>
+            </div>
+        </div>
+        <!-- Breadcrumb row END -->
+        <!-- contact area -->
+        <div class="content-area">
+            <!-- who we are -->
+            <div class="container">
+                <div class="row">
+                    <!-- Side Bar -->
+                    <div class="col-md-12">
+                        <div>
+                            <h1 class="m-b20 m-t0 hkg-blue">介紹</h1>
+                            <div class="w3-separator bg-primary"></div>
+                            <p>
+																幼童軍團本年度共有成員八十六名，均是來自小三至小六之學生。去年，除舉行例會，幼童軍亦有參與不同類型的活動，包括校外活動、訓練班、露營及為學校提供服務等。本旅幼童軍團本年度在不同的比賽亦有優異表現，除了奪得本年度港島西區主席盃之亞軍，並奪港島地域大潭三塘跑比賽幼童組的冠軍及季軍。此外，幼童軍團亦獲香港童軍總會選為本年度優異旅團。
+														</p>
+                        </div>
+                        <!-- img -->
+                        <div class="m-b20 col-md-12">
+                            <img style="width: 100%;" src="images/scouts/img-youngScouts-bg.jpg" alt="">
+                        </div>
+                        <!-- img -->
+                    </div>
+                    <!-- Side Bar END -->
+                    <!-- Right Bar -->
+                </div>
+            </div>
+            <!-- who we are END -->
+        </div>
+        <!-- contact area  END -->
+    </div>
+    <!-- Content END-->
 		<!-- Footer -->
 		<footer class="site-footer">
 			<!-- <div class="footer-top">
