--- a/header.html
+++ b/header.html
@@ -4,20 +4,8 @@
 			<div class="top-bar">
 				<div class="container" style="margin-top: 10px; margin-bottom: 10px;">
 					<div class="row">
-						<!-- <div class="w3-topbar-left">
-						<ul class="social-line text-center pull-right">
-							<li><a href="javascript:void(0);"><i class="fa fa-phone"></i> <span>+149 75 23 222 38</span> </a></li>
-							<li><a href="javascript:void(0);"><i class="fa fa-envelope-o"></i> <span>info@example.com</span></a></li>
-							<li><a href="javascript:void(0);"><i class="fa fa-clock-o"></i> <span>Mon - Fri: 08.00 - 17.00</span></a></li>
-						</ul>
-					</div>                         -->
 						<div class="w3-topbar-right">
 							<ul class="text-center pull-right" style="display: flex; list-style: none;">
-								<!-- <ul class="social-line text-center pull-right"> -->
-								<!-- <li><a href="javascript:void(0);" class="fa fa-facebook"></a></li>
-							<li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
-							<li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
-							<li><a href="javascript:void(0);" class="fa fa-google-plus"></a></li> -->
 								<li><a href="centennial-tenthBrigade.html" class=" ">第十旅百週年專區 </a>|&nbsp;</li>
 								<li><a href="leader-login.html" class=" ">領袖登入區 </a>|&nbsp;</li>
 								<li><a href="youth-login.html" class=" ">青少年成員登入區</a></li>
@@ -35,12 +23,11 @@
 
 						<!-- website logo -->
 						<div class="logo-header mostion hkg-logo"><a href="index.html">
-							<img src="images/10thhkg-logo.svg" width="193" height="89" alt="">
-						</a></div>
+								<img src="images/10thhkg-logo.svg" width="193" height="89" alt="">
+							</a></div>
 
 						<!-- nav toggle button -->
-						<button data-target=".header-nav" data-toggle="collapse" type="button"
-							class="navbar-toggle collapsed">
+						<button data-target=".header-nav" data-toggle="collapse" type="button" class="navbar-toggle collapsed">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -50,16 +37,14 @@
 						<!-- extra nav -->
 						<div class="extra-nav">
 							<div class="extra-cell">
-								<button id="quik-search-btn" type="button" class="site-button"><i
-										class="fa fa-search"></i></button>
+								<button id="quik-search-btn" type="button" class="site-button"><i class="fa fa-search"></i></button>
 							</div>
 						</div>
 
 						<!-- Quik search -->
 						<div class="w3-quik-search  bg-primary">
 							<form action="#">
-								<input name="search" value="search" type="text" class="form-control"
-									placeholder="Type to search">
+								<input name="search" value="search" type="text" class="form-control" placeholder="Type to search">
 								<span id="quik-search-remove"><i class="fa fa-remove"></i></span>
 							</form>
 						</div>
@@ -75,31 +60,31 @@
 										<!-- <li><a href="index-3.html">home 3</a></li> -->
 										<li><a href="history-brigadier.html">歷任旅長名單</a></li>
 										<li><a href="committee.html">旅務委員會</a></li>
-                    <li><a href="leader.html">領袖</a></li>
-                    <li> <a href="javascript:;">獎項及獎勵</a>
-                      <ul class="sub-menu">
-                        <li><a href="awards-rewards.html#award1">旅團獎項</a></li>
-                        <li><a href="awards-rewards.html#award2">功績榮譽獎勵</a></li>
-                        <li><a href="awards-rewards.html#award3">香港總監高級嘉許、香港總監嘉許</a></li>
-                        <li><a href="awards-rewards.html#award4">長期服務獎勵</a></li>
-                        <li><a href="awards-rewards.html#award5">感謝狀</a></li>
-                        <li><a href="awards-rewards.html#award6">木章</a></li>
-                        <li><a href="awards-rewards.html#award7">模範童軍</a></li>
-                        <li><a href="awards-rewards.html#award8">支部最高獎勵</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="gallery.html">相簿</a></li>                    
+										<li><a href="leader.html">領袖</a></li>
+										<li> <a href="javascript:;">獎項及獎勵</a>
+											<ul class="sub-menu">
+												<li><a href="awards-rewards.html#award1">旅團獎項</a></li>
+												<li><a href="awards-rewards.html#award2">功績榮譽獎勵</a></li>
+												<li><a href="awards-rewards.html#award3">香港總監高級嘉許、香港總監嘉許</a></li>
+												<li><a href="awards-rewards.html#award4">長期服務獎勵</a></li>
+												<li><a href="awards-rewards.html#award5">感謝狀</a></li>
+												<li><a href="awards-rewards.html#award6">木章</a></li>
+												<li><a href="awards-rewards.html#award7">模範童軍</a></li>
+												<li><a href="awards-rewards.html#award8">支部最高獎勵</a></li>
+											</ul>
+										</li>
+										<li><a href="gallery.html">相簿</a></li>
 									</ul>
 								</li>
 								<li> <a href="javascript:;">小童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Features<i class="fa fa-chevron-down"></i></a> -->
 									<ul class="sub-menu">
-                    <li><a href="young-scouts-intro.html">介紹</a></li>
-                    <li><a href="young-scouts-leader.html">領袖</a></li>
-                    <li><a href="young-scouts-awards.html">獎項</a></li>
-                    <li><a href="young-scouts-gallery.html">相簿</a></li>
-                    <li><a href="young-scouts-notice.html">通告</a></li>
-                    <li><a href="young-scouts-uniform.html">小童軍制服</a></li>
+										<li><a href="young-scouts-intro.html">介紹</a></li>
+										<li><a href="young-scouts-leader.html">領袖</a></li>
+										<li><a href="young-scouts-awards.html">獎項</a></li>
+										<li><a href="young-scouts-gallery.html">相簿</a></li>
+										<li><a href="young-scouts-notice.html">通告</a></li>
+										<li><a href="young-scouts-uniform.html">小童軍制服</a></li>
 										<li> <a href="javascript:;">小童軍有用資料</a>
 											<ul class="sub-menu">
 												<li><a href="young-scouts-leaveLink.html">請假連結</a></li>
@@ -109,113 +94,115 @@
 								</li>
 								<li> <a href="javascript:;">幼童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Pages<i class="fa fa-chevron-down"></i></a> -->
-                    <ul class="sub-menu">
-                        <li><a href="cub-scout-intro.html">介紹</a></li>
-                        <li><a href="cub-scout-leader.html">領袖</a></li>
-                        <li><a href="cub-scout-awards.html">獎項</a></li>
-                        <li><a href="cub-scout-gallery.html">相簿</a></li>
-                        <li><a href="cub-scout-notice.html">通告</a></li>
-                        <li><a href="cub-scout-manual.html">幼童軍手册</a></li>
-                        <li><a href="cub-scout-uniform.html">小童軍制服</a></li>
-                        <li> <a href="javascript:;">小童軍有用資料</a>
-                          <ul class="sub-menu">
-                            <li><a href="cub-scout-info.html#info1">請假連結</a></li>
-                            <li><a href="cub-scout-info.html#info2">善行紀錄表</a></li>
-                          </ul>
-                        </li>
-                      </ul>
+									<ul class="sub-menu">
+										<li><a href="cub-scout-intro.html">介紹</a></li>
+										<li><a href="cub-scout-leader.html">領袖</a></li>
+										<li><a href="cub-scout-awards.html">獎項</a></li>
+										<li><a href="cub-scout-gallery.html">相簿</a></li>
+										<li><a href="cub-scout-notice.html">通告</a></li>
+										<li><a href="cub-scout-manual.html">幼童軍手册</a></li>
+										<li><a href="cub-scout-uniform.html">幼童軍制服</a></li>
+										<li> <a href="javascript:;">幼童軍有用資料</a>
+											<ul class="sub-menu">
+												<li><a href="cub-scout-info.html#info1">請假連結</a></li>
+												<li><a href="cub-scout-info.html#info2">善行紀錄表</a></li>
+											</ul>
+										</li>
+									</ul>
 								</li>
 								<li> <a href="javascript:;">童軍團<i class="fa fa-chevron-down"></i></a>
-                  <ul class="sub-menu">
-                      <li><a href="scout-troop-intro.html">介紹</a></li>
-                      <li><a href="scout-troop-leader.html">領袖</a></li>
-                      <li><a href="scout-troop-awards.html">獎項</a></li>
-                      <li><a href="scout-troop-gallery.html">相簿</a></li>
-                      <li><a href="scout-troop-notice.html">通告</a></li>
-                      <li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
-                      <li> <a href="javascript:;">童軍有用資料</a>
-                        <ul class="sub-menu">
-                          <li><a href="scout-troop-info.html#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
-                          <li><a href="scout-troop-info.html#info2">支部最高獎章標誌</a></li>
-                          <li><a href="scout-troop-info.html#info3">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+									<ul class="sub-menu">
+										<li><a href="scout-troop-intro.html">介紹</a></li>
+										<li><a href="scout-troop-leader.html">領袖</a></li>
+										<li><a href="scout-troop-awards.html">獎項</a></li>
+										<li><a href="scout-troop-gallery.html">相簿</a></li>
+										<li><a href="scout-troop-notice.html">通告</a></li>
+										<li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
+										<li> <a href="javascript:;">童軍有用資料</a>
+											<ul class="sub-menu">
+												<li><a href="scout-troop-info.html#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
+												<li><a href="scout-troop-info.html#info2">支部最高獎章標誌</a></li>
+												<li><a href="scout-troop-info.html#info3">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
+											</ul>
+										</li>
+									</ul>
 								</li>
 								<li> <a href="javascript:;">深資童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Blog<i class="fa fa-chevron-down"></i></a> -->
-                    <ul class="sub-menu">
-                        <li><a href="senior-scout-intro.html">介紹</a></li>
-                        <li><a href="senior-scout-leader.html">領袖</a></li>
-                        <li><a href="senior-scout-awards.html">獎項</a></li>
-                        <li><a href="senior-scout-committee.html">執行委員會</a></li>
-                        <li><a href="senior-scout-gallery.html">相簿</a></li>
-                        <li><a href="senior-scout-notice.html">通告</a></li>
-                        <li><a href="senior-scout-train.html">深資童軍訓練綱要</a></li>
-                        <li><a href="senior-scout-info.html">深資童軍有用資料</a></li>
-                    </ul>
-                </li>
+									<ul class="sub-menu">
+										<li><a href="senior-scout-intro.html">介紹</a></li>
+										<li><a href="senior-scout-leader.html">領袖</a></li>
+										<li><a href="senior-scout-awards.html">獎項</a></li>
+										<li><a href="senior-scout-committee.html">執行委員會</a></li>
+										<li><a href="senior-scout-gallery.html">相簿</a></li>
+										<li><a href="senior-scout-notice.html">通告</a></li>
+										<li><a href="senior-scout-train.html">深資童軍訓練綱要</a></li>
+										<li><a href="senior-scout-info.html">深資童軍有用資料</a></li>
+									</ul>
+								</li>
 								<li> <a href="javascript:;">樂行童軍團<i class="fa fa-chevron-down"></i></a>
-                    <ul class="sub-menu">
-                        <li><a href="rover-scout-intro.html">介紹</a></li>
-                        <li><a href="rover-scout-leader.html">領袖</a></li>
-                        <li><a href="rover-scout-awards.html">獎項</a></li>
-                        <li><a href="rover-scout-committee.html">管理委員會</a></li>
-                        <li><a href="rover-scout-gallery.html">相簿</a></li>
-                        <li><a href="rover-scout-notice.html">通告</a></li>
-                        <li><a href="rover-scout-train.html">樂行童軍訓練綱要</a></li>
-                        <li><a href="rover-scout-info.html">樂行童軍有用資料</a></li>
-                    </ul>
+									<ul class="sub-menu">
+										<li><a href="rover-scout-intro.html">介紹</a></li>
+										<li><a href="rover-scout-leader.html">領袖</a></li>
+										<li><a href="rover-scout-awards.html">獎項</a></li>
+										<li><a href="rover-scout-committee.html">管理委員會</a></li>
+										<li><a href="rover-scout-gallery.html">相簿</a></li>
+										<li><a href="rover-scout-notice.html">通告</a></li>
+										<li><a href="rover-scout-train.html">樂行童軍訓練綱要</a></li>
+										<li><a href="rover-scout-info.html">樂行童軍有用資料</a></li>
+									</ul>
 								</li>
 								<li class="has-mega-menu "> <a href="javascript:;">下載區<i class="fa fa-chevron-down"></i></a>
 									<ul class="mega-menu">
-                      <li> <a href="javascript:;">報名表 & 同意書</a>
-                        <ul>
-                          <li><a href="/event-registration-form.pdf">活動/訓練班報名表</a></li>
-                          <li><a href="/parental-consent.pdf">家長同意書</a></li>
-                        </ul>
-                      </li>
-                      <li> <a href="javascript:;">通知書</a>
-                        <ul>
-                            <li><a href="golden-bauhinia-award-notice.pdf">金紫荊獎章開展通知書</a></li>
-                          </ul>
-                      </li>
-                      <li> <a href="javascript:;">申請表</a>
-                        <ul>
-                            <li><a href="golden-bauhinia-award-form.pdf">金紫荊獎章及證書申請表</a></li>
-                            <li><a href="scout-specialist-badge.pdf">童軍專科徽章/獎章考驗申請表</a></li>
-                            <li><a href="general-leader-medal-and-certificate.pdf">總領袖獎章及證書申請表</a></li>
-                            <li><a href="senior-scout-medal-and-certificate.pdf">深資童軍獎章及證書申請表</a></li>
-                            <li><a href="honor-scout-medal-and-certificate.pdf">榮譽童軍獎章及證書申請表</a></li>
-                            <li><a href="roverScout-and-Baden-medal-and-certificate.pdf">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
-                            <li><a href="rover-scout-medal-and-certificate.pdf">樂行童軍獎章及證書申請表</a></li>
-                            <li><a href="baden-medal-and-certificate.pdf">貝登堡獎章及證書申請表</a></li>
-                            <li><a href="overseas-application-form">參加海外活動申請表格</a></li>
-                          </ul>
-                      </li>
-                      <li> <a href="javascript:;">其他</a>
-                        <ul>
-                            <li><a href="seniorScout-honorScout-medal-and-certificate.pdf">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+										<li> <a href="javascript:;">報名表 & 同意書</a>
+											<ul>
+												<li><a href="./pdf/event-registration-form.pdf" target="_blank">活動/訓練班報名表</a></li>
+												<li><a href="./pdf/parental-consent.pdf" target="_blank">家長同意書</a></li>
+											</ul>
+										</li>
+										<li> <a href="javascript:;">通知書</a>
+											<ul>
+												<li><a href="./pdf/golden-bauhinia-award-notice.pdf" target="_blank">金紫荊獎章開展通知書</a></li>
+											</ul>
+										</li>
+										<li> <a href="javascript:;">申請表</a>
+											<ul>
+												<li><a href="./pdf/golden-bauhinia-award-form.pdf" target="_blank">金紫荊獎章及證書申請表</a></li>
+												<li><a href="./pdf/scout-specialist-badge.pdf" target="_blank">童軍專科徽章/獎章考驗申請表</a></li>
+												<li><a href="./pdf/general-leader-medal-and-certificate.pdf" target="_blank">總領袖獎章及證書申請表</a></li>
+												<li><a href="./pdf/senior-scout-medal-and-certificate.pdf" target="_blank">深資童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/honor-scout-medal-and-certificate.pdf" target="_blank">榮譽童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/roverScout-and-Baden-medal-and-certificate.pdf"
+														target="_blank">樂行童軍獎章及貝登堡獎章考驗申請</a></li>
+												<li><a href="./pdf/rover-scout-medal-and-certificate.pdf" target="_blank">樂行童軍獎章及證書申請表</a></li>
+												<li><a href="./pdf/baden-medal-and-certificate.pdf" target="_blank">貝登堡獎章及證書申請表</a></li>
+												<li><a href="./pdf/overseas-application-form" target="_blank">參加海外活動申請表格</a></li>
+											</ul>
+										</li>
+										<li> <a href="javascript:;">其他</a>
+											<ul>
+												<li><a href="./pdf/seniorScout-honorScout-medal-and-certificate.pdf"
+														target="_blank">深資童軍獎章及榮譽童軍獎章考驗計劃</a></li>
+											</ul>
+										</li>
+									</ul>
 								</li>
 								<li> <a href="javascript:;">重要連結<i class="fa fa-chevron-down"></i></a>
-                  <ul class="sub-menu">
-                      <li><a href="http://www.spc.edu.hk/" target="_blank">聖保羅書院</a></li>
-                      <li><a href="https://www.spc-ps.edu.hk/" target="_blank">聖保羅書院小學</a></li>
-                      <li><a href="https://www.scout.org.hk/chi/" target="_blank">香港童軍總會</a></li>
-                      <li><a href="http://www.hkirscout.org.hk" target="_blank">香港童軍總會 – 港島地域</a></li>
-                      <li><a href="http://group.scout.org.hk/hkw/" target="_blank">香港童軍總會 – 港島西區</a></li>
-                      <li><a href="#" target="_blank">World Organisation of the Scout Movement</a></li>
-                  </ul>
+									<ul class="sub-menu">
+										<li><a href="http://www.spc.edu.hk/" target="_blank">聖保羅書院</a></li>
+										<li><a href="https://www.spc-ps.edu.hk/" target="_blank">聖保羅書院小學</a></li>
+										<li><a href="https://www.scout.org.hk/chi/" target="_blank">香港童軍總會</a></li>
+										<li><a href="http://www.hkirscout.org.hk" target="_blank">香港童軍總會 – 港島地域</a></li>
+										<li><a href="http://group.scout.org.hk/hkw/" target="_blank">香港童軍總會 – 港島西區</a></li>
+										<li><a href="#" target="_blank">World Organisation of the Scout Movement</a></li>
+									</ul>
 								</li>
 								<li> <a href="javascript:;">有用資料 <i class="fa fa-chevron-down"></i></a>
-                  <ul class="sub-menu">
-                      <li><a href="useful-info.html#info1">儀容與制服手册</a></li>
-                      <li><a href="useful-info.html#info2">惡劣天氣及空氣污染應變措施</a></li>
-                      <li><a href="useful-info.html#info3">進行童軍先鋒工程活動安全須知</a></li>
-                  </ul>
+									<ul class="sub-menu">
+										<li><a href="useful-info.html#info1">儀容與制服手册</a></li>
+										<li><a href="useful-info.html#info2">惡劣天氣及空氣污染應變措施</a></li>
+										<li><a href="useful-info.html#info3">進行童軍先鋒工程活動安全須知</a></li>
+									</ul>
 								</li>
 							</ul>
 						</div>
